change value .env

--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@ REDIS_PORT=6379
 ELASTICSEARCH_NODE="http://elasticsearch:9200"
 
 # OAuth
-OAUTH_CLIENT_ID=your_oauth_client_id
-OAUTH_CLIENT_SECRET=your_oauth_client_secret
-OAUTH_CALLBACK_URL=http://localhost:3000/auth/callback
+OAUTH_CLIENT_ID="838195822163-pm2sfkao6ljk3ss64sous14e3rkbikva.apps.googleusercontent.com"
+OAUTH_CLIENT_SECRET="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"
+OAUTH_CALLBACK_URL="http://localhost:4500/auth/callback"
